--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
 		<link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 		<style>
 			@import url('https://fonts.googleapis.com/css2?family=Kanit:wght@200&display=swap');
+			@import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
 		</style>
 		<link
 			rel="stylesheet"
