ทำ 404 Page not found

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
 		<style>
 			@import url('https://fonts.googleapis.com/css2?family=Kanit:wght@200&display=swap');
 			@import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
+			@import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
 		</style>
 		<link
 			rel="stylesheet"
@@ -46,5 +47,6 @@
 
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
-    --></body>
+    -->
+	</body>
 </html>
