--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 		/>
 		<link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 		<style>
-			@import url('https://fonts.googleapis.com/css2?family=Kanit:wght@200&display=swap');
+			@import url('https://fonts.googleapis.com/css2?family=Kanit&display=swap');
 			@import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
 			@import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
 		</style>
